<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_register"
    tools:context="com.jfp.loginandregistrationwithphpandmysql.Register">



    <EditText
        android:id="@+id/username"
        android:layout_width="281dp"
        android:layout_height="49dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:textColor="@color/input_register"
        android:background="@color/input_register_bg"
        android:hint="@string/username"
        android:textColorHint="@color/input_register_hint"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/eamil_register"
        app:layout_constraintVertical_bias="0.715" />


    <EditText
        android:id="@+id/eamil_register"
        android:layout_width="281dp"
        android:layout_height="49dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/Email"
        android:textColorHint="@color/input_register_hint"
        android:background="@color/input_register_bg"
        android:textColor="@color/input_register"
        android:inputType="textEmailAddress"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintVertical_bias="0.34" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="281dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:background="@color/input_register_bg"
        android:hint="@string/password"
        android:textColor="@color/input_register"
        android:gravity="end"
        android:textColorHint="@color/input_register_hint"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eamil_register"
        app:layout_constraintVertical_bias="0.097"
        app:layout_constraintHorizontal_bias="0.505" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="124dp"
        android:layout_height="41dp"
        android:text="@string/register"
        android:background="@color/bg_register"
        android:textColor="@color/white"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/password_register"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.212" />

    <TextView
        android:id="@+id/jumpto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_member"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnregister"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.266" />

</android.support.constraint.ConstraintLayout>
