<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    tools:context="com.jfp.loginandregistrationwithphpandmysql.Login">

    <EditText
        android:id="@+id/email"
        android:layout_width="281dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/Email"
        android:background="@color/white"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint"
        android:inputType="textEmailAddress"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintVertical_bias="0.195" />

    <EditText
        android:id="@+id/password"
        android:layout_width="281dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/password"
        android:gravity="end"
        android:textColorHint="@color/input_login_hint"
        android:textColor="@color/input_login"
        android:background="@color/white"
        android:inputType="textPassword"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintVertical_bias="0.086" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/btn_login_bg"
        android:textColor="@color/btn_login"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/notmember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notmember"
        android:textColor="@color/white"
        android:textSize="20dp"

        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.198" />
</android.support.constraint.ConstraintLayout>
